--- a/new index.html
+++ b/new index.html
@@ -1,25 +1,92 @@
 <!-- gimme boiler plate for simple html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      :root {
+        --ink: #111;
+        --muted: #666;
+      }
+
+      body {
+        font-family: "Roboto", Arial, sans-serif;
+        color: var(--ink);
+        margin: 40px;
+      }
+
+      .toc {
+        list-style: none;
+        padding: 0;
+        margin: 12px 0 24px;
+        max-width: 720px;
+      }
+
+      .toc li {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        gap: 24px;
+        padding: 6px 0;
+        border-bottom: 1px solid #ddd;
+      }
+
+      .toc a {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        gap: 24px;
+        width: 100%;
+        color: inherit;
+        text-decoration: none;
+      }
+
+      .toc a:hover {
+        text-decoration: underline;
+      }
+
+      .leftie {
+        flex: 1 1 55%;
+        text-align: left;
+      }
+
+      .rightie {
+        flex: 1 1 45%;
+        text-align: right;
+        color: var(--muted);
+      }
+    </style>
+  </head>
+  <body>
     <!-- h1 on a whim -->
-     <h1> on a whim</h1>
-     <h2> na rympal</h2>
-     <!-- trips -->
-      <div>trips</div>
-      <ul>
-        <li>Nordsee</li><li>from Bad Zwischenhahn to Bensersiel</li>
-        <li>Ostsee</li><li>from Schwerin to Beoltenhagen</li>
-        <li>Oderbruchbahn</li><li>from Wriezen to Letschin</li>
-      </ul>
-      <div>about</div>
-
-
-</head>
-<body>
-
-</body>
+    <h1>on a whim</h1>
+    <h2>na rympal</h2>
+    <!-- trips -->
+    <div>trips</div>
+    <ul class="toc">
+      <li>
+        <a href="map.html">
+          <span class="leftie">Nordsee</span>
+          <span class="rightie">from Bad Zwischenhahn to Bensersiel</span>
+        </a>
+      </li>
+      <li>
+        <span class="leftie">Ostsee</span>
+        <span class="rightie">from Schwerin to Beoltenhagen</span>
+      </li>
+      <li>
+        <span class="leftie">Oderbruchbahn</span>
+        <span class="rightie">from Wriezen to Letschin</span>
+      </li>
+    </ul>
+    <div>about</div>
+  </body>
 </html>
