--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </li>
       <li>
         <span class="leftie">Ostsee</span>
-        <span class="rightie">from Schwerin to Beoltenhagen</span>
+        <span class="rightie">from Schwerin to Boltenhagen</span>
       </li>
       <li>
         <span class="leftie">Oderbruchbahn</span>
