chore: remove ds file

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         </a>
       </li>
       <li>
-        <span class="leftie">Ostsee</span>
-        <span class="rightie">from Schwerin to Boltenhagen</span>
+        <a href="map2.html">
+          <span class="leftie">Ostsee</span>
+          <span class="rightie">from Schwerin to Boltenhagen</span>
+        </a>
       </li>
       <li>
         <span class="leftie">Oderbruchbahn</span>
