add scroll swipe arrow nav

--- a/map.html
+++ b/map.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
+    <script src="navigation.js"></script>
 
 <img src="map.png" alt="map of the world" height="600">
 
