adapt size for mobile first

--- a/map.html
+++ b/map.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
     <script src="navigation.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        
+        @media (max-width: 768px) {
+            img {
+                width: 80%;
+                display: block;
+                margin: 0 auto;
+            }
+        }
+    </style>
 
-<img src="map.png" alt="map of the world" height="600">
+<img src="map.png" alt="map of the world">
 
 
 </head>
