--- a/map2.html
+++ b/map2.html
@@ -30,6 +30,19 @@
       a:hover {
         text-decoration: underline;
       }
+      
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      
+      @media (max-width: 768px) {
+        img {
+          width: 80%;
+          display: block;
+          margin: 20px auto;
+        }
+      }
     </style>
   </head>
   <body>
