--- a/trip2text.html
+++ b/trip2text.html
@@ -6,10 +6,10 @@
     <title>Map</title>
     <script src="navigation.js"></script>
     <script>
-      // Configure navigation: right swipe/arrow → map.html
+      // Configure navigation: right swipe/arrow → map2.html
       window.addEventListener("DOMContentLoaded", function () {
         initNavigation({
-          rightTarget: "map.html",
+          rightTarget: "map2.html",
         });
       });
     </script>
