--- a/map2.html
+++ b/map2.html
@@ -51,6 +51,9 @@
         initNavigation({
           leftTarget: "trip2text.html",
           rightTarget: "index.html",
+          currentView: "map",
+          showAllTrips: true,
+          allTripsTarget: "index.html"
         });
       });
     </script>
