--- a/trip1text.html
+++ b/trip1text.html
@@ -10,6 +10,9 @@
       window.addEventListener("DOMContentLoaded", function () {
         initNavigation({
           rightTarget: "map.html",
+          currentView: "text",
+          showAllTrips: true,
+          allTripsTarget: "index.html"
         });
       });
     </script>
@@ -43,7 +46,7 @@
     </style>
   </head>
   <body>
-    <img src="trip2.png" alt="foo" />
+    <img src="trip1.png" alt="foo" />
     <p>
       now the long text now the long text now the long text now the long text
       now the long text now the long text now the long text now the long text
