--- a/trip2text.html
+++ b/trip2text.html
@@ -10,6 +10,9 @@
       window.addEventListener("DOMContentLoaded", function () {
         initNavigation({
           rightTarget: "map2.html",
+          currentView: "text",
+          showAllTrips: true,
+          allTripsTarget: "index.html"
         });
       });
     </script>
