--- a/map.html
+++ b/map.html
@@ -11,7 +11,10 @@
         window.addEventListener('DOMContentLoaded', function() {
             initNavigation({
                 leftTarget: 'trip1text.html',
-                rightTarget: 'index.html'
+                rightTarget: 'index.html',
+                currentView: 'map',
+                showAllTrips: true,
+                allTripsTarget: 'index.html'
             });
         });
     </script>
