--- a/map2.html
+++ b/map2.html
@@ -60,7 +60,7 @@
   </head>
   <body>
     <h1>Map 2</h1>
-    <p>Ostsee: from Schwerin to Beoltenhagen.</p>
+    <p>Ostsee: from Schwerin to Boltenhagen.</p>
     <img src="map2.png" alt="Map of Ostsee trip" />
     <p><a href="index.html">Back to trips</a></p>
   </body>
