--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <body>
     <!-- h1 on a whim -->
     <h1>on a whim</h1>
-    <h2>na rympal</h2>
+    <h2>na rympał</h2>
     <!-- trips -->
     <div>trips</div>
     <ul class="toc">
